# earthpv

./: .gitignore  CLAUDE.md  README.md  pixi.toml  pyproject.toml  todo.md
configs/: aoi.yaml  terramind_pv.yaml  terramind_pv_fraction.yaml  terramind_pv_fraction_pakistan.yaml  terramind_pv_seasonal.yaml  terramind_pv_v3india.yaml
docs/: calibration-mapping-protocol.md  glint_examples.md  index.html
results/: pakistan_pv_estimator_atlas.html
scripts/: build_contrast_composites.py  build_germany_seasonal.py  build_pv_density_maps_html.py  compare_candidates_overpass.py  compose_loop.sh  compose_loop_preboom.sh  download_vida_ind.sh  glint_alignment_check.py  glint_candidate_precision.py  glint_cell_density_analyze.py  glint_cell_density_pull.py  glint_cell_density_targets.py  glint_cell_pixel_anomaly_pilot.py  glint_cell_pixel_orientation_pilot.py  glint_cell_pixel_scl_coherence_pilot.py  glint_density_analyze.py  glint_density_pull.py  glint_density_targets.py  glint_direct_detect.py  glint_direct_detection_test.py  glint_iou_experiment.py  glint_orientation_pakistan.py  glint_pixel_refine.py  glint_psf_prototype.py  glint_revalidate_pakistan.py  glint_s2_example_grid.py  glint_skyfield_check.py  glint_spike_rate_estimator.py  glint_validate_calibration_box.py  glint_validate_new_leads.py  glint_validate_new_leads_catchall.py  glint_validate_pakistan.py  glint_validation.py  infer_after_compose.sh  merge_chip_index.py  merge_fraction_chip_index.py  pv_density_vs_transitionzero.py  pv_growth_map.py  rebuild_training.sh  reconcile_contrast.py  (+10 more)
src/earthpv/: atlas.py  (+26 more)
(+29 files in other folders)
